Fixes: NB#187100 -  List items are using wrong backgrounds in many applications. Example from settingings applicaton

--- a/base/meegotouch/libmeegotouchviews/style/mlistitemstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mlistitemstyle.css
@@ -1,7 +1,8 @@
 /* MGridItemStyle : MGridItemStyle */
 MListItemStyle {    
 
-    background-tiles : meegotouch-list-background 10px 10px 10px 10px;
+    background-tiles: meegotouch-list-background $CORNER_MARGINS;
+    background-image : meegotouch-list-fullwidth-background $CORNER_MARGINS;
 
     background-color: $COLOR_BACKGROUND;
     background-opacity: 1.0;
